--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Matthew Pun | Portfolio</title>
   </head>
-  <body style = "background-color: #1a1a2a; min-width: 1300px">
+  <body style = "background-color: #1a1a2a;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
